# GuitarPedalRack

./: .gitignore  100_PERCENT_FUNCTIONAL.md  ADVANCED_FEATURES.md  CLEANUP_COMPLETE.md  CMakeLists.txt  COMPLETION_SUMMARY.md  EFFECTS_REFERENCE.md  FINAL_DELIVERY_SUMMARY.md  FINAL_STATUS.md  FULL_FUNCTIONAL_SPEC.md  FUNCTIONAL_IMPLEMENTATION_STATUS.md  GITHUB_PUSH_INSTRUCTIONS.md  GITHUB_READY.md  IMPLEMENTATION_COMPLETE_PHASE1.md  IMPLEMENTATION_PLAN.md  LICENSE  MODULAR_RACK_COMPLETE.md  MODULAR_RACK_UI_DESIGN.md  PRESET_LIBRARY.md  PRODUCTION_SAFETY_FIXES.md  README.md  READY_FOR_GITHUB.md  START_HERE.md  UI_FIXES_APPLIED.md
docs/: BACKEND_COMPLETE.md  BUILD_SUCCESS.md  BUILD_SUMMARY.md  DAY2_SUMMARY.md  DAY3_SUMMARY.md  DAY4_SUMMARY.md  EXPANSION_PLAN_PRODUCTION.md  IMPLEMENTATION_COMPLETE.md  IMPLEMENTATION_STATUS_FINAL.md  LAUNCH_INSTRUCTIONS.md  MODERN_UI_UPDATE.md  MULTITHREADING_DESIGN.md  NEXT_STEPS_COMPLETE.md  PERFORMANCE_TEST_RESULTS.md  PHASE1_PROGRESS.md  PHASE2_COMPLETE.md  PREMIUM_UI_COMPLETE.md  PRODUCTION_READY_COMPLETE.md  PRODUCTION_READY_STATUS.md  PROJECT_REALITY_CHECK.md  PROJECT_STATUS.md  PUSH_TO_GITHUB_NOW.txt  README.md  README_NEW.md  REDESIGN_NOTES.md  SESSION_SUMMARY.md
source/: PluginEditor.cpp  PluginEditor.h  PluginEditor_Full.cpp  PluginEditor_Full.h  PluginEditor_Minimal.h  PluginEditor_Modern.cpp  PluginProcessor.cpp  PluginProcessor.h
source/DSP/: AdvancedRouting.h  AudioModule.h  AutomationEngine.h  EffectLibrary.cpp  EffectLibrary.h  PerformanceMonitor.h  SIMDProcessor.h  SignalChain.cpp  SignalChain.h  SmartSignalChain.cpp  SmartSignalChain.h
source/DSP/Amp/: AmpSimulator.cpp  AmpSimulator.h
source/DSP/Cabinet/: CabinetIR.cpp  CabinetIR.h
source/DSP/Drive/: Distortion.cpp  Distortion.h  TubeOverdrive.cpp  TubeOverdrive.h
source/DSP/Dynamics/: Compressor.cpp  Compressor.h  NoiseGate.cpp  NoiseGate.h
source/DSP/Modulation/: Chorus.cpp  Chorus.h
source/DSP/TimeFX/: Delay.cpp  Delay.h  Reverb.cpp  Reverb.h
source/DSP/Utility/: EQ.cpp  EQ.h
source/State/: FactoryPresets.cpp  PresetFormat.h  PresetManager.cpp  PresetManager.h
source/Testing/: PerformanceTest.h
source/UI/: CabinetEditor.cpp  CabinetEditor.h  EffectBrowser.cpp  EffectBrowser.h  EffectModule.cpp  EffectModule.h  FunctionalAmpHead.cpp  FunctionalAmpHead.h  FunctionalPedal.cpp  FunctionalPedal.h  HardwareKnob.cpp  HardwareKnob.h  ModularRackView.cpp  ModularRackView.h  ModuleEditor.cpp  ModuleEditor.h  PedalboardView.cpp  PedalboardView.h
